Fixed small issues to make menu visible on large screens.

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -406,6 +406,7 @@ body {
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
+  text-transform: uppercase;
   width: 125px;
 }
 .location__address{
@@ -725,7 +726,7 @@ body {
     text-align: right;
   }
 }
-@media (min-width: 1300px){
+@media (min-width: 1440px){
   .container{
     width: 1300px;
     margin: 0 auto;
@@ -740,7 +741,7 @@ body {
   }
   .wrapper{
     background: transparent url("../img/green-cat.png") no-repeat 100% 0;
-    /*width: 1440px;*/
+    width: 1440px;
     margin: 0 auto;
   }
   .page-header{
@@ -903,6 +904,7 @@ body {
     position: absolute;
     top: 105px;
     z-index: 1000;
+    width: 100%;
   }
   .location__wrapper{
     background-color: #ffffff;
@@ -913,9 +915,6 @@ body {
   }
   .location__map{
     height: 400px;
-  }
-  .location__invite{
-    text-transform: uppercase;
   }
   .location__address{
     text-align: left;
